<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
          android:layout_width="match_parent"
          android:layout_height="170dp"
          android:padding="@dimen/top"
          android:paddingBottom="19dp"
          android:src="@mipmap/ic_launcher"/>

    <TextView
        android:text="@string/connect"
        android:gravity="center_horizontal"
        android:layout_margin="40dp"
        android:textColor="#0F8538"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/username"
        android:id="@+id/txtLogin"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/password"
        android:id="@+id/txtPassword"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:backgroundTint="#0F8538"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</LinearLayout>