<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:padding="@dimen/top"
        android:paddingBottom="19dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:text="@string/connection"
        android:gravity="center"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="@string/login"
        android:id="@+id/txtLogin"
        android:gravity="center"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

 <EditText
        android:hint="@string/password"
        android:id="@+id/txtPassword"
        android:gravity="center"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnConnect"
        android:text="@string/connect"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>